fixed bug in namespace resolution for the register page

--- a/SaasPos/WebClient/Views/Account/Register.cshtml
+++ b/SaasPos/WebClient/Views/Account/Register.cshtml
@@ -1,4 +1,6 @@
-﻿@model WebClient.Models.RegisterViewModel
+﻿@using WebClient.Models
+@model RegisterViewModel
+   
 @{
     ViewBag.Title = "Register";
 }
